@@ -101,22 +101,24 @@ REPO_ROOT=$(pwd)/maven-repo
 cd $REPO_ROOT
 find . -name "$VESPA_RELEASE" -type d | sed 's,^./,,' | xargs -n 1 -P $NUM_PROC -I '{}' bash -c "sign_module {}"
 
+# Required for the nexus plugin to work with JDK 17
+export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED"
+
 LOGFILE=$(mktemp)
-$MVN --settings=$SOURCE_DIR/screwdriver/settings-publish.xml \
+$MVN $MVN_OPTS --settings=$SOURCE_DIR/screwdriver/settings-publish.xml \
     org.sonatype.plugins:nexus-staging-maven-plugin:1.6.14:deploy-staged-repository \
     -DrepositoryDirectory=$TMP_STAGING \
     -DnexusUrl=https://oss.sonatype.org \
     -DserverId=ossrh \
     -DautoReleaseAfterClose=false \
+    -DstagingProgressTimeoutMinutes=10 \
     -DstagingProfileId=407c0c3e1a197 | tee $LOGFILE
 
 STG_REPO=$(cat $LOGFILE | grep 'Staging repository at http' | head -1 | awk -F/ '{print $NF}')
-$MVN --settings=$SOURCE_DIR/screwdriver/settings-publish.xml -N \
+$MVN $MVN_OPTS --settings=$SOURCE_DIR/screwdriver/settings-publish.xml -N \
     org.sonatype.plugins:nexus-staging-maven-plugin:1.6.14:rc-release \
     -DnexusUrl=https://oss.sonatype.org/ \
     -DserverId=ossrh \
+    -DstagingProgressTimeoutMinutes=10 \
     -DstagingRepositoryId=$STG_REPO
-
-
-
 
